# lap-notebook

./: example.py  pyproject.toml
lap_notebook/: resolver.py
