[project]
name = "lap-notebook"
version = "0.1.0"
description = "Utility for running and dealing with LAP pipelines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lap_notebook"]